-- create_tables_tch.sql
-- Specifity : Only create if not already exists

-- Table T_SUIV_RUN
SELECT * FROM DBC.TablesV WHERE DatabaseName = 'TCH' AND TableName = 'T_SUIV_RUN';
.IF ACTIVITYCOUNT <> 0 THEN .GOTO SKIP_T_SUIV_RUN;
CREATE TABLE TCH.T_SUIV_RUN (
    RUN_ID INTEGER NOT NULL,
    RUN_STRT_DTTM TIMESTAMP(0) NOT NULL,
    RUN_END_DTTM TIMESTAMP(0),
    RUN_STTS_CD VARCHAR(10) NOT NULL)
    UNIQUE PRIMARY INDEX (RUN_ID);
.LABEL SKIP_T_SUIV_RUN

-- Table T_SUIV_TRMT
SELECT * FROM DBC.TablesV WHERE DatabaseName = 'TCH' AND TableName = 'T_SUIV_TRMT';
.IF ACTIVITYCOUNT <> 0 THEN .GOTO SKIP_T_SUIV_TRMT;
CREATE TABLE TCH.T_SUIV_TRMT (
    EXEC_ID INTEGER NOT NULL,
    RUN_ID INTEGER NOT NULL,
    SCRPT_NAME VARCHAR(250) NOT NULL,
    EXEC_STRT_DTTM TIMESTAMP(0) NOT NULL,
    EXEC_END_DTTM TIMESTAMP(0),
    EXEC_STTS_CD VARCHAR(10) NOT NULL)
    UNIQUE PRIMARY INDEX (EXEC_ID);
.LABEL SKIP_T_SUIV_TRMT

